fix: use corswebfilter method